--- a/yukiakari/package.json
+++ b/yukiakari/package.json
@@ -39,6 +39,7 @@
 		"rete-area-plugin": "^2.0.2",
 		"rete-connection-plugin": "^2.0.1",
 		"rete-render-utils": "^2.0.2",
-		"rete-svelte-plugin": "^2.0.1"
+		"rete-svelte-plugin": "^2.0.1",
+		"svelte-awesome-color-picker": "^3.0.6"
 	}
 }
