fix github actions

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,13 +28,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm run build
+      - run: 'cd ./yukiakari && npm run build'
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './build'
+          path: './yukiakari/build'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
